Fix a bug in how brightness was calculated for the contrast-color function. Extract brightness as its own module & function.
Closes #1254.

--- a/frameworks/compass/stylesheets/compass/utilities/color/_contrast.scss
+++ b/frameworks/compass/stylesheets/compass/utilities/color/_contrast.scss
@@ -1,36 +1,52 @@
+@import "compass/utilities/color/brightness";
+
 $contrasted-dark-default:   #000 !default;
 $contrasted-light-default:  #fff !default;
 
-// Returns the `$light` color when the `$color` is dark
-// and the `$dark` color when the `$color` is light.
-// The brightness calculations determine when the lightness of
-// `$color` changes from "dark" to "light".
+// Returns either the `$light` or `$dark` color
+// by deciding which contrasts more with `$color`.
+//
+// E.g. This can be used to select the more readable foreground color
+// for a given background color.
+//
+// `$dark` defaults to black and `$light` defaults to white.
 //
 // When `$color` is `null`, this function returns `null`.
 @function contrast-color(
   $color,
   $dark: $contrasted-dark-default,
-  $light: $contrasted-light-default
+  $light: $contrasted-light-default,
+  $threshold: null
 ) {
+  @if $threshold {
+    // Deprecated in Compass 0.13
+    @warn "The $threshold argment to contrast-color is no longer needed and will be removed in the next release."
+  }
   @if $color == null {
     @return null;
   }
   @else {
-    $color-brightness: round((red($color) * 299) + (green($color) * 587) + (blue($color) * 114) / 1000);
-    $dark-text-brightness: round((red($dark) * 299) + (green($dark) * 587) + (blue($dark) * 114) / 1000);
-    $light-text-brightness: round((red($light) * 299) + (green($light) * 587) + (blue($light) * 114) / 1000);
+    $color-brightness: brightness($color);
+    $dark-text-brightness: brightness($dark);
+    $light-text-brightness: brightness($light);
 
     @return if(abs($color-brightness - $light-text-brightness) > abs($color-brightness - $dark-text-brightness), $light, $dark);
   }
 }
 
-// Sets the specified background color and calculates a dark or light contrasted text color.
-// The arguments are passed through to the [contrast-color function](#function-contrast-color).
+// Sets the specified background color and calculates a dark or light
+// contrasted text color.  The arguments are passed through to the
+// [contrast-color function](#function-contrast-color).
 @mixin contrasted(
   $background-color,
   $dark: $contrasted-dark-default,
-  $light: $contrasted-light-default
+  $light: $contrasted-light-default,
+  $threshold: null
 ) {
+  @if $threshold {
+    // Deprecated in Compass 0.13
+    @warn "The $threshold argment to contrasted is no longer needed and will be removed in the next release."
+  }
   background-color: $background-color;
   color: contrast-color($background-color, $dark, $light);
 }
